src/objects/vlocity_ins__ConsumerProvider__c.object
<CustomObject>
    <description>Represents the list of a health plan member’s service providers such as  physicians, specialists, dentist etc. Master-detail child object of the Contact.</description>
    <fields>
        <fullName>vlocity_ins__ConsumerAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer Account Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>StandardAccount</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consumer Providers (Consumer Account)</relationshipLabel>
        <relationshipName>ConsumerProviderConsumerAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConsumerContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Consumer Providers (Consumer Contact)</relationshipLabel>
        <relationshipName>ConsumerContactProviders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consumer Providers</relationshipLabel>
        <relationshipName>ConsumerProviders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Consumer Providers (Provider Contact)</relationshipLabel>
        <relationshipName>ConsumerProviders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipLength__c</fullName>
        <formula>TODAY() -  vlocity_ins__EffectiveStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecialtyType__c</fullName>
        <label>Specialty Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adult Intensivist</fullName>
                </value>
                <value>
                    <fullName>Allergy</fullName>
                </value>
                <value>
                    <fullName>Anesthesia</fullName>
                </value>
                <value>
                    <fullName>Bariatric Medicine / Surgery</fullName>
                </value>
                <value>
                    <fullName>Burn / Trauma</fullName>
                </value>
                <value>
                    <fullName>Cardiac Catheterization</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular Surgery</fullName>
                </value>
                <value>
                    <fullName>Colorectal Surgery</fullName>
                </value>
                <value>
                    <fullName>Dentistry</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Electrophysiology</fullName>
                </value>
                <value>
                    <fullName>Emergency Medicine</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Family Practice</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>General Surgery</fullName>
                </value>
                <value>
                    <fullName>Geriatrics</fullName>
                </value>
                <value>
                    <fullName>Gynecologic Oncology</fullName>
                </value>
                <value>
                    <fullName>Hematology Oncology</fullName>
                </value>
                <value>
                    <fullName>Hepatobiliary</fullName>
                </value>
                <value>
                    <fullName>Hospitalist</fullName>
                </value>
                <value>
                    <fullName>Infectious Disease</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Interventional Radiology</fullName>
                </value>
                <value>
                    <fullName>Medical Genetics</fullName>
                </value>
                <value>
                    <fullName>Neonatology</fullName>
                </value>
                <value>
                    <fullName>Nephrology</fullName>
                </value>
                <value>
                    <fullName>Neuroradiology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Consumer Provider</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumer Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>